[metadata]
name = sdflex-ironic-driver
summary = A project used to hold out-of-tree sdflex ironic drivers
description-file =
    README.rst
author = HPE
author-email = nisha.agarwal@hpe.com
home-page = https://sdflex-ironic-driver.readthedocs.io/en/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    sdflex_ironic_driver

[entry_points]

ironic.hardware.interfaces.management =
    sdflex-redfish = sdflex_ironic_driver.sdflex_redfish.management:SdflexRedfishManagement

ironic.hardware.interfaces.power =
    sdflex-redfish = sdflex_ironic_driver.sdflex_redfish.power:SdflexRedfishPower

ironic.hardware.interfaces.boot =
    sdflex-redfish = sdflex_ironic_driver.sdflex_redfish.boot:SdflexPXEBoot

ironic.hardware.interfaces.bios =
    sdflex-redfish = sdflex_ironic_driver.sdflex_redfish.bios:SdflexRedfishBios

ironic.hardware.types =
    sdflex-redfish = sdflex_ironic_driver.sdflex_redfish.drivers:SdflexRedfishHardware

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sdflex-ironic-driver/locale
domain = sdflex-ironic-driver

[update_catalog]
domain = sdflex-ironic-driver
output_dir = sdflex-ironic-driver/locale
input_file = sdflex-ironic-driver/locale/sdflex-ironic-driver.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sdflex-ironic-driver/locale/sdflex-ironic-driver.pot
